# kairowiki

./: .editorconfig  .env  .environment  .envrc  .gitignore  Cargo.toml  LICENSE-MIT  README.md  TODO.md  default.nix  deny.toml  dockerfile.nix  init_db.sh  prettier.config.js  release.nix  schema.sql  shell.nix  sqlx-data.json
.github/workflows/: deny.toml  deny.yml  docker.yml  lints.yml  test.yml
nix/: rust.nix  sources.json
sql/: file_storage_schema.sql  migrations_schema.sql  user_schema.sql
src/: api.rs  article.rs  context.rs  csp.rs  data.rs  db.rs  error.rs  file_storage.rs  filters.rs  forms.rs  git.rs  handlers.rs  index.rs  ipc.rs  macros.rs  main.rs  markdown.rs  migrations.rs  password.rs  post_receive_hook.rs  relative_url.rs  search.rs  serde.rs  session.rs  sqlite.rs  templates.rs  user_storage.rs
src/git/: read.rs  repo_path.rs  write.rs
src/handlers/: api.rs  auth.rs  file_storage.rs  root.rs  search.rs  wiki.rs
src/index/: title_segments_tokenizer.rs
src/user_storage/: sqlite.rs
static/: edit.js  history.js  style.css
static/css/: normalize.css  skeleton.css  style.css
static/js/: edit.js  history.js
templates/: add_article.html  captioned_image.html  edit.html  error.html  generic.html  headline_start.html  history.html  login.html  post-receive-hook.sh  register.html  register_refresh.html  search_results.html  user_edit.html  wiki_page.html  wiki_root.html
web/: default.nix  package.json  tsconfig.json  webpack.config.js
web/src/: editor.ts  kairowiki.ts  types.ts  util.ts
web/src/css/: style.css
