[package]
name = "kairowiki"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"
license = "Unlicense OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
askama = "0.10.3"
async-trait = "0.1.41"
blake3 = "0.3.5"
bstr = { version = "0.2.13", default-features = false, features = ["std"] }
bytes = "0.5.6"
cookie = "0.14.2"
derive_more = "0.99.9"
envy = "0.4.1"
futures-util = "0.3.5"
git2 = { version = "0.13.8", default-features = false }
hex = "0.4.2"
htmlescape = "0.3.1"
itertools = "0.9.0"
mime = "0.3.16"
nix = "0.18.0"
parking_lot = "0.11.0"
pulldown-cmark = { version = "0.7.2", default-features = false, features = ["simd"] }
rand = "0.7.3"
regex = "1.3.9"
rust-argon2 = "0.8.2"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
smallvec = "1.4.1"
syntect = { version = "4.2.0", default-features = false, features = ["html", "regex-onig", "dump-load"] }
tantivy = "0.12.0"
thiserror = "1.0.20"
time = "0.2.16"
tokio = { version = "0.2.22", features = ["rt-threaded", "sync", "signal", "uds"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
tracing = "0.1.17"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.9"
tree_magic_mini = "1.0.0"
url = { version = "2.1.1", features = ["serde"] }
urlencoding = "1.1.1"
uuid = { version = "0.8.1", features = ["v4"] }
warp = { version = "0.2.4", default-features = false, features = ["multipart"] }
petgraph = "0.5.1"
askama_escape = "0.10.1"

[dependencies.sqlx]
git = "https://github.com/launchbadge/sqlx"
rev = "dc0d325738815e2aa6347da2054c1e2c08898b4b"
default-features = false
features = ["sqlite", "runtime-tokio", "macros", "offline"]

[dependencies.openssl]
version = "0.10.30"
features = [
    "vendored"
]

[profile.release]
codegen-units = 1
lto = "fat"
